corrected gap in nav

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ img {
     flex-wrap: wrap;
     align-items: center;
 
-    gap: 46px;
+    gap: 93px;
 }
 .navigation {
     display: flex;
